<resources>
    <string name="app_name">GitHub Viewer</string>
    <string name="search">Search</string>
    <string name="title_activity_list">ListActivity</string>
</resources>
